# bevy-signed-distance-mesh-generation

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.cargo/: config.toml
assets/shaders/: color.wgsl  fractals.wgsl  phong_reflection_model.wgsl  render.wgsl  render_buffers.wgsl  render_ray_marching.wgsl  render_scene_sd.wgsl  signed_distance.wgsl  utils.wgsl
cuda/includes/: bindings.h  color.cu  marching_cubes.cu  marching_cubes_constants.cu  ray_marching.cu  signed_distance.cu  types.cu  utils.cu
cuda/modules/: common.cu  compute_mesh_generation.cu  compute_render.cu
notebooks/: bsdmg-experiments.ipynb
src/: example_scene.rs  input_handling.rs  main.rs
src/bindings/: mod.rs
src/cuda/: mod.rs
src/renderer/: mod.rs
